[gd_scene load_steps=17 format=2]

[ext_resource path="res://Fireball.gd" type="Script" id=1]
[ext_resource path="res://asset/fireball/0018.png" type="Texture" id=2]
[ext_resource path="res://asset/fireball/0019.png" type="Texture" id=3]
[ext_resource path="res://asset/fireball/0020.png" type="Texture" id=4]
[ext_resource path="res://asset/fireball/0021.png" type="Texture" id=5]
[ext_resource path="res://asset/fireball/0022.png" type="Texture" id=6]
[ext_resource path="res://asset/fireball/0023.png" type="Texture" id=7]
[ext_resource path="res://asset/fireball/0024.png" type="Texture" id=8]
[ext_resource path="res://asset/fireball/0025.png" type="Texture" id=9]
[ext_resource path="res://asset/fireball/0026.png" type="Texture" id=10]
[ext_resource path="res://asset/fireball/0027.png" type="Texture" id=11]
[ext_resource path="res://sounds/explosion.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "New Anim",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 22.8141

[sub_resource type="CanvasItemMaterial" id=3]

render_priority = 0
blend_mode = 0
light_mode = 0

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 40.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 100.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 5.73131e-43
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 20.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 1.0
color = Color( 0.976563, 0, 0, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Radial Accel", "Scale", "Spread", "Trail" ]

[node name="Fireball" type="RigidBody2D" groups=[
"fireball",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Linear", "Pickable", "Transform" ]

[node name="Fireballanim" type="AnimatedSprite" parent="." index="0"]

rotation = -1.5708
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 1 )
animation = "New Anim"
frame = 3
playing = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

position = Vector2( 11.6698, 0.353566 )
rotation = 2.67191e-15
scale = Vector2( 0.664825, 0.368457 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 10.7815, -2.8387 )
scale = Vector2( 1, 1.60544 )
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="." index="2"]

material = SubResource( 3 )
position = Vector2( 20.0407, -1.14891 )
rotation = 1.5708
scale = Vector2( 0.368457, 0.664825 )
emitting = false
amount = 100
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Time", "Transform", "Visibility" ]

[node name="Explosion" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 12 )
volume_db = -30.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="finished" from="Explosion" to="." method="_on_Explosion_finished"]


